tests/errors/missing_export.orus
use tests::modules::hello_module::{unknown}

fn main() {
}
